[gd_scene load_steps=5 format=3 uid="uid://rxgyrevhw3dj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_i52wa"]
[ext_resource type="PackedScene" uid="uid://604vn3jnfwol" path="res://scenes/player.tscn" id="2_s7fyp"]
[ext_resource type="Texture2D" uid="uid://dfcrb2loux5hp" path="res://assets/grid/green_grid.png" id="3_ccd8l"]
[ext_resource type="Theme" uid="uid://b5mfj0kk2j24t" path="res://themes/main.tres" id="4_y5lrx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_i52wa")

[node name="Player" parent="." instance=ExtResource("2_s7fyp")]
position = Vector2(500, 500)

[node name="GridImage" type="Sprite2D" parent="."]
position = Vector2(500, 500)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ccd8l")

[node name="EnemiesTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 442.0
offset_top = 18.0
offset_right = 555.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_y5lrx")
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxScoreLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 17.0
offset_right = 197.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_y5lrx")
text = "Max score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_bottom = 0.5
offset_left = 888.0
offset_top = 19.0
offset_right = 975.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_y5lrx")
text = "Time: 0s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundColor" type="ColorRect" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(10, 10)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.639216, 0.913725, 0.572549, 1)
